--- a/CSGO/OpenCases/www/css/main.css
+++ b/CSGO/OpenCases/www/css/main.css
@@ -81,7 +81,7 @@ body {
     margin-top: 1px;
     padding: 3px 5px;
 }
-.closeCase {
+.closeCase, .closeInventory {
     position: absolute;
     right: 10px;
     top: 10px;
@@ -101,27 +101,6 @@ body {
   src: local("Roboto"), local("Roboto-Regular"), url("../font/RobotoRegular.ttf") format("ttf");
   unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-/*RARITY*/
-.milspec {
-    background: linear-gradient(to right,#3747A7,#262E5E);
-}
-.restricted {
-    background: linear-gradient(to right,#6533A6,#422660);
-}
-.classified{
-    background: linear-gradient(to right,#A41EA0,#5E1D57);
-}
-.covert {
-    background: linear-gradient(to right,#BA3432,#662226);
-}
-.rare {
-    background: linear-gradient(to right,#DAB515,#826E1B);
-}
-
-.industrialS, .industrial {
-    background: linear-gradient(to right,#4A78AD,#324455);
-}
-/*RARITY_END*/
 
 div.weapon > .weaponInfo {
     margin: 0;
@@ -226,6 +205,9 @@ div.weapon > .weaponInfo {
 .win > span {
     color: #FFCD48;
     display: block;
+}
+span.winQuality {
+	color: #fff;
 }
 .win img {
 	max-width: 100%;
