--- a/CSGO/OpenCases/www/css/main.css
+++ b/CSGO/OpenCases/www/css/main.css
@@ -4,8 +4,9 @@ body {
 	margin: 0;
 }
 .cases {
-	text-align: center;
-	background: url(../images/bg2.png) fixed;
+    text-align: left;
+    background: url(../images/bg2.png) fixed;
+    padding-left: 5px;
 }
 .case {
     display: inline-block;
@@ -17,13 +18,15 @@ body {
 }
 .name {
     display: block;
-    text-align: left;
+    /*text-align: left;*/
     background: linear-gradient(to right, #828F9E, #474C52);
     color: #fff;
     height: 38px;
     padding: 0 10px;
     padding-top: 2px;
-	text-shadow: 1px 1px 2px rgba(0,0,0,0.84);
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.84);
+    font-family: LatoLight;
+    line-height: 2em;
 }
 .case img {
     width: 190px;
@@ -32,6 +35,14 @@ body {
     padding: 5px;
     padding-bottom: 10px;
 	box-shadow: 0 -2px 3px rgba(50, 50, 50, 0.85) inset;
+}
+.cases h1 {
+    color: #fff;
+    font-family: LatoRegular;
+    font-size: 1.4em;
+    margin: 10px 0;
+	text-align: center;
+    /* border-top: 1px dotted; */
 }
 
 /*WEAPONS*/
@@ -67,6 +78,8 @@ body {
     padding-right: 5px;
     width: 112px;
     margin: -8px 0 -10px 5px;
+	width: 117px;
+    height: 112px;
 }
 .weaponInfo {
     margin: -5px 0;
@@ -75,18 +88,28 @@ body {
 }
 .weapon i {
     font-style: normal;
-    top: -127px;
+    top: -118px;
     position: relative;
     right: 2px;
-    font-size: 9pt;
+    font-size: 8pt;
     color: #f8ffb4;
+    font-family: LatoLight;
+}
+.wp-statTrak:before {
+    content: "";
+    display: block;
+    position: absolute;
+    margin-top: 76px;
+    border: 7px solid transparent;
+    border-bottom: 6px solid #DCDE37;
+    border-left: 10px solid #DCDE37;
 }
 .type {
     background-size: cover;
     font-size: 11px;
     width: 125px;
     display: inline-block;
-    font-family: "Roboto";
+    font-family: LatoRegular;
     line-height: 14px;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.84);
     margin-top: 1px;
@@ -106,14 +129,6 @@ body {
     width: 30px;
     height: 30px;
 }
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Roboto"), local("Roboto-Regular"), url("../font/RobotoRegular.ttf") format("ttf");
-  unicode-range: U+0-FF, U+131, U+152-153, U+2C6, U+2DA, U+2DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
 div.weapon > .weaponInfo {
     margin: 0;
 }
@@ -159,7 +174,6 @@ div.weapon > .weaponInfo {
 }
 
 /*Если разрешение экрана меньше 495px*/
-@media (max-width:495px) {
 	.case {
 		margin: 7px 5px;
 		width: 125px;
@@ -176,7 +190,9 @@ div.weapon > .weaponInfo {
 		padding: 5px 10px;
 		position: absolute;
 		width: 105px;
+		line-height: 1.2em;
 	}
+@media (max-width:495px) {
 	/*Carusel*/
 	.scrollerContainer {
 		margin: 45px 0 10px;
@@ -213,6 +229,7 @@ div.weapon > .weaponInfo {
 .win {
     background: #003440;
     padding-top: 25px;
+	font-family: LatoRegular;
 }
 .win > span {
     color: #FFCD48;
@@ -257,6 +274,9 @@ span.winName {
     background-position: 10px;
     display: none;
 }
+.inventoryItemSelected {
+	background: url("../images/Cases/itembgSelected.png") #111;
+}
 .navigate {
     display: inline-block;
     width: 50%;
@@ -264,7 +284,7 @@ span.winName {
     background: #1D1D1D;
 }
 .navigat {
-    box-shadow: 7px -4px 8px #000;
+    box-shadow: 0 -1px 4px #000;
     text-align: center;
     color: #fff;
     font-size: 13pt;
