--- a/CSGO/OpenCases/www/css/rarity.css
+++ b/CSGO/OpenCases/www/css/rarity.css
@@ -1,3 +1,6 @@
+.consumer {
+	background: linear-gradient(to right,#9EA7AE,#687073);
+}
 .milspec {
     background: linear-gradient(to right,#3747A7,#262E5E);
 }
