--- a/CSGO/OpenCases/www/css/main.css
+++ b/CSGO/OpenCases/www/css/main.css
@@ -44,6 +44,15 @@ body {
 	text-align: center;
     /* border-top: 1px dotted; */
 }
+.souvenir {
+    box-shadow: none !important;
+	padding-bottom: 35px;
+}
+.souvenir img {
+    height: 110px !important;
+    background: linear-gradient(to top, RGBA(0, 0, 0, 0.37), RGBA(255, 255, 255, 0), rgba(255, 255, 255, 0)) !important;
+    box-shadow: none !important;
+}
 
 /*WEAPONS*/
 .weapons {
@@ -181,7 +190,7 @@ div.weapon > .weaponInfo {
 	}
 	.case img {
 		width: 115px;
-		height: auto;
+		height: 83px;
 		padding: 5px;
 		padding-bottom: 10px;
 	}
