--- a/CSGO/OpenCases/www/css/navigationMenu.css
+++ b/CSGO/OpenCases/www/css/navigationMenu.css
@@ -1,11 +1,12 @@
 .navigationBar {
-    background: #000;
+    background: #0F0F0F;
     position: fixed;
     top: 0;
     width: 100%;
     height: 40px;
     vertical-align: middle;
-	z-index:30;
+    z-index: 30;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
 }
 .navigationBar_hamburger {
     margin-top: 5px;
