--- a/CSGO/OpenCases/www/css/main.css
+++ b/CSGO/OpenCases/www/css/main.css
@@ -4,7 +4,7 @@ body {
 	margin: 0;
 }
 .cases {
-    text-align: left;
+    text-align: center;
     background: url(../images/bg2.png) fixed;
     padding-left: 5px;
 }
