--- a/CSGO/OpenCases/www/css/main.css
+++ b/CSGO/OpenCases/www/css/main.css
@@ -5,7 +5,7 @@ body {
 }
 .cases {
     text-align: center;
-    background: url(../images/bg2.png) fixed;
+    background: url(../images/bg2.png);
     padding-left: 5px;
 }
 .case {
@@ -69,10 +69,10 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     background: #40858A;
-    width: 250px;
-    z-index: 1;
+    width: 265px;
+    z-index: 2;
     font-family: LatoRegular;
-    padding: 5px;
+    padding: 10px;
     border-radius: 4px;
     box-shadow: 1px 1px 3px RGBA(0, 0, 0, 0.5);
     color: #fff;
