--- a/OpenCase/css/rulet.css
+++ b/OpenCase/css/rulet.css
@@ -43,6 +43,7 @@ body {
     max-width: 100%;
 	margin: 0 auto;
 	margin-top: 50px;
+	-webkit-transform: translate3d(0, 0, 0);
 }
 #status {
     text-align: center;
