--- a/OpenCase/css/main.css
+++ b/OpenCase/css/main.css
@@ -5,7 +5,7 @@ body {
 }
 .cases {
     text-align: center;
-    background: url(../images/bg2.png);
+    /*background: url(../images/bg2.png);*/
     padding-left: 5px;
 }
 .case {
@@ -43,7 +43,7 @@ body {
     background: linear-gradient(to top, #A8A8A8, #474747);
     padding: 5px;
     padding-bottom: 10px;
-	box-shadow: 0 -2px 3px rgba(50, 50, 50, 0.85) inset;
+	box-shadow: 0 -1px 1px rgba(50, 50, 50, 0.52) inset;
 }
 .cases h1 {
     color: #fff;
@@ -88,10 +88,6 @@ body {
     top: -12px;
     border-radius: 24px;
     background-position: -1px;
-}
-#special {
-    font-weight: bold;
-    color: #ff9f9f;
 }
 
 .inventory li {
@@ -230,9 +226,8 @@ div.weapon > .weaponInfo {
 	-webkit-transform: translate3d(0, 0, 0);
 }
 
-/*Если разрешение экрана меньше 495px*/
 	.case {
-		margin: 7px 5px;
+		margin: 15px 6px;
 		width: 125px;
 		height: 138px;
 	}
@@ -249,6 +244,7 @@ div.weapon > .weaponInfo {
 		width: 105px;
 		line-height: 1.2em;
 	}
+/*Если разрешение экрана меньше 495px*/
 @media (max-width:495px) {
 	/*Carusel*/
 	.scrollerContainer {
