--- a/OpenCase/css/rps.css
+++ b/OpenCase/css/rps.css
@@ -1,5 +1,7 @@
 ﻿body {
 	padding-bottom: 0;
+	width: 100%;
+	height: 100%;
 }
 .container {
     margin-top: 50px;
@@ -122,18 +124,18 @@
 	display: block;
 	margin: 15px auto;
 }
-.items {
+ul.winItems {
     list-style: none;
     padding-left: 0;
     color: #fff;
     font-family: Lato;
 }
-.items li {
+ul.winItems li {
     border-bottom: 1px solid #000;
     background: #2d2d2d;
     padding: 6px 5px 6px 10px;
 }
-.items li b {
+ul.winItems li b {
     font-weight: normal;
     display: block;
     height: 5px;
