--- a/OpenCase/css/rps.css
+++ b/OpenCase/css/rps.css
@@ -10,6 +10,10 @@
     top: 0;
     left: 0;
     overflow-x: hidden;
+	height: calc(100% - 50px);
+    background: url(../images/background.png);
+    background-size: cover;
+}
 }
 .battle-field {
     background: #323f52;
