OC Update RPS release

--- a/OpenCase/css/fonts.css
+++ b/OpenCase/css/fonts.css
@@ -94,6 +94,9 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-pacman:before {
+    content: "\e916";
+}
 .icon-bullhorn:before {
     content: "\e91a";
 }
@@ -120,6 +123,9 @@
 }
 .icon-info:before {
     content: "\ea0c";
+}
+.icon-scissors:before {
+    content: "\ea5a";
 }
 
 /* End icons in menu */
