--- a/OpenCase/css/rulet.css
+++ b/OpenCase/css/rulet.css
@@ -45,6 +45,15 @@ body {
 	margin: 0 auto;
 	margin-top: 50px;
 	-webkit-transform: translate3d(0, 0, 0);
+	position: relative;
+    background: #171a2a;
+    border-radius: 50%;
+    padding: 2px;
+    border: 2px solid #afafaf;
+}
+#circle hr {
+    border: 1px solid RGBA(255, 255, 255, 0.42);
+    border-radius: 4px;
 }
 #status {
     text-align: center;
