--- a/OpenCase/css/main.css
+++ b/OpenCase/css/main.css
@@ -124,26 +124,25 @@ body {
     display: inline-block;
     background: url("../images/Cases/itembg.png") #111;
     color: #fff;
-    height: 124px;
+	height: 127px;
     width: 123px;
     margin: 5px 4px;
 	text-align: right;
 }
 .weapon img {
-    padding-right: 5px;
-    width: 112px;
-    margin: -8px 0 -10px 5px;
-	width: 117px;
-    height: 112px;
+    margin: 0 auto;
+    width: 113px;
+    height: 105px;
+    display: block;
 }
 .weaponInfo {
-    margin: -5px 0;
+    margin: -13px 0;
 	text-align: left;
-	overflow: hidden;
+    overflow: hidden;
 }
 .weapon i {
     font-style: normal;
-    top: -118px;
+    top: -113px;
     position: relative;
     right: 2px;
     font-size: 8pt;
@@ -154,10 +153,24 @@ body {
     content: "";
     display: block;
     position: absolute;
-    margin-top: 76px;
+    margin-top: 79px;
     border: 7px solid transparent;
     border-bottom: 6px solid #DCDE37;
     border-left: 10px solid #DCDE37;
+}
+.new-weapon {
+    border: 2px solid rgba(63, 255, 0, 0.43);
+    margin: 3px 2px;
+}
+.new-weapon:after {
+    content: "";
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    margin-left: -30px;
+    margin-top: -17px;
+    background: url(../images/new_weapon.png);
 }
 .type {
     background-size: cover;
@@ -171,7 +184,7 @@ body {
     padding: 3px 5px;
 	white-space: nowrap;
 }
-.closeCase, .closeInventory {
+.closeCase, .closeInventory, .close-game {
     position: absolute;
     right: 10px;
     top: 10px;
@@ -183,9 +196,6 @@ body {
     background: url("../images/Cases/close.png") no-repeat center;
     width: 30px;
     height: 30px;
-}
-div.weapon > .weaponInfo {
-    margin: 0;
 }
 
 /*CARUSEL*/
@@ -348,5 +358,16 @@ button#what-i-can-win-Button {
 	font-family: LatoRegular;
 }
 .inventoryItemSelected {
-	background: url("../images/Cases/itembgSelected.png") #111;
+    border: 2px solid #5db4ff;
+    margin: 3px 2px;
+}
+.inventoryItemSelected:after {
+    content: "";
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    margin-left: -30px;
+    margin-top: -17px;
+    background: url(../images/weapon_selected.png);
 }
