--- a/OpenCase/css/navigationMenu.css
+++ b/OpenCase/css/navigationMenu.css
@@ -7,14 +7,23 @@
     vertical-align: middle;
     z-index: 30;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    text-align: center;
 }
 .navigationBar_hamburger {
     margin-top: 5px;
     floaT: left;
     margin-left: 10px;
 }
+.navigationBar_refresh {
+    float: right;
+    margin-top: 5px;
+    margin-right: 10px;
+}
+.navigationBar_hamburger, .navigationBar_refresh {
+	cursor: pointer;
+}
 .navigationBar span {
-    display: block;
+	display: inline-block;
     text-align: center;
     line-height: 40px;
     font-family: LatoBold;
@@ -76,4 +85,16 @@
 .icon {
     margin: 0 17px 0 11px;
     font-size: 1.2em;
+}
+.menu-notification {
+    float: right;
+    background: #dc3e3e;
+    font-family: LatoRegular;
+    border-radius: 50%;
+    line-height: 100%;
+    width: 23px;
+    height: 23px;
+    text-align: center;
+    font-size: 0.8em;
+    line-height: 1.5em;
 }
