--- a/OpenCase/css/rps.css
+++ b/OpenCase/css/rps.css
@@ -28,6 +28,7 @@
     z-index: 1;
     left: 50%;
     transform: translate(-50%);
+	-webkit-transform: translate(-50%);
 }
 .round-count {
     color: #fff;
