--- a/OpenCase/css/coinflip.css
+++ b/OpenCase/css/coinflip.css
@@ -7,6 +7,7 @@ background-color: #333;
 .container {
     margin-top: 40px;
 	overflow-x:hidden;
+	font-family: Lato;
 }
 @media(max-width:390px) {
 	.container {
@@ -55,8 +56,9 @@ background-color: #333;
     border-radius: 2px;
     text-transform: uppercase;
     font-size: 0.9em;
-    font-family: LatoBold;
+    font-family: Lato;
 	cursor: pointer;
+	font-weight: bold;
 }
 .table-name img {
     width: 35px;
