--- a/OpenCase/css/navigationMenu.css
+++ b/OpenCase/css/navigationMenu.css
@@ -46,20 +46,48 @@
 }
 .menu_playerInfo {
     display: block;
-    height: 90px;
     background: #303030;
     box-shadow: -1px 2px 3px #000;
+    padding: 10px;
 }
-.menu_playerInfo img {
+.menu_ava {
     width: 80px;
     border-radius: 50%;
     line-height: 20px;
-    margin: 5px 10px 0 8px;
+	margin-right: 10px;
 }
 .menu_playerInfo span {
     color: #fff;
     text-align: center;
     line-height: 90px;
+	font-family: Lato;
+}
+.menu_rank img {
+    width: 60px;
+}
+.progress {
+    overflow: hidden;
+    height: 8px;
+    margin: 5px 0;
+    background-color: #f5f5f5;
+    border-radius: 3px;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+.progress-bar {
+    float: left;
+    width: 0%;
+    height: 100%;
+    font-size: 12px;
+    line-height: 20px;
+    color: #ffffff;
+    text-align: center;
+    background-color: #d9534f;
+    -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+    -webkit-transition: width 0.6s ease;
+    -o-transition: width 0.6s ease;
+    transition: width 0.6s ease;
 }
 .leftMenu ul {
     list-style: none;
