--- a/OpenCase/css/navigationMenu.css
+++ b/OpenCase/css/navigationMenu.css
@@ -8,6 +8,7 @@
     z-index: 30;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
     text-align: center;
+	overflow: hidden;
 }
 .navigationBar_hamburger {
     margin-top: 5px;
