--- a/OpenCase/css/fonts.css
+++ b/OpenCase/css/fonts.css
@@ -100,6 +100,9 @@
 .icon-bullhorn:before {
   content: "\e91a";
 }
+.icon-cart:before {
+  content: "\e93a";
+}
 .icon-coin-dollar:before {
   content: "\e93b";
 }
