--- a/OpenCase/css/main.css
+++ b/OpenCase/css/main.css
@@ -139,7 +139,7 @@ body {
     list-style: none;
     background: #131313;
     margin: 0;
-    padding: 18px;
+    padding: 18px 1px;
 }
 .weapon {
     display: inline-block;
@@ -378,27 +378,6 @@ button#what-i-can-win-Button {
     color: #fff;
     font-size: 15px;
     font-family: sans-serif;
-}
-.weapons_zabor {
-    background: url(../images/zabor.png) repeat-x;
-    width: 100%;
-    height: 20px;
-    position: absolute;
-	z-index: 1;
-}
-.weapons_zabor-bot {
-    background: url(../images/zabor.png) repeat-x;
-    width: 100%;
-    height: 20px;
-    margin-top: -20px;
-	-webkit-transform: rotate(180deg);
-	-moz-transform: rotate(180deg);
-	-ms-transform: rotate(180deg);
-	-o-transform: rotate(180deg);
-    transform: rotate(180deg);
-    /*position: absolute;*/
-    background-position: 10px;
-    display: none;
 }
 .hide {
 	display: none;
