--- a/OpenCase/css/main.css
+++ b/OpenCase/css/main.css
@@ -117,6 +117,7 @@ body {
 }
 .inventory li {
     color: #fff;
+	position: relative;
 }
 .inventory li a {
     color: #a1e2ed;
@@ -164,8 +165,8 @@ body {
 }
 .weapon i {
     font-style: normal;
-    top: -113px;
-    position: relative;
+    top: 2px;
+    position: absolute;
     right: 2px;
     font-size: 8pt;
     color: #f8ffb4;
